--- a/about.html
+++ b/about.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <title>关于我</title>
+  <meta charset="UTF-8">
+  <title>关于</title>
+  <style>
+    body {
+      background: #0f172a;
+      color: #e5e7eb;
+      font-family: "微软雅黑", system-ui;
+      max-width: 720px;
+      margin: auto;
+      padding: 60px 24px;
+    }
+    a {
+      color: #38bdf8;
+    }
+  </style>
 </head>
 <body>
-    <h1>关于我</h1>
-    <p>我是湖北大学大三学生库煜坤</p>
 
-    <a href="index.html">← 返回首页</a>
+<h1>关于这个博客</h1>
+
+<p>
+这是一个用于整理学习内容与技术理解的个人博客，
+强调结构与长期积累，而非碎片化记录。
+</p>
+
+<p><a href="index.html">← 返回首页</a></p>
+
 </body>
 </html>
